Add customizable confidence level

--- a/config.json
+++ b/config.json
@@ -1,8 +1,10 @@
 {
+  "is_logger_active": false,
   "images_path": "images",
   "key_quit": "esc",
   "file_extensions": [".png", ".jpg"],
   "should_return_position": false,
   "grayscale": true,
-  "duration": 0.1
+  "duration": 0.1,
+  "confidence": 1.0
 }
